--- a/client-module/src/org/jugvale/peoplemanagement/client/view/initial.fxml
+++ b/client-module/src/org/jugvale/peoplemanagement/client/view/initial.fxml
@@ -5,15 +5,16 @@
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.controller.InitialController">
+<AnchorPane id="AnchorPane" prefHeight="468.0000999999975" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.controller.NavigationController">
   <children>
-    <VBox alignment="CENTER" layoutX="118.0" layoutY="56.0" prefHeight="288.0" prefWidth="365.0" spacing="100.0">
-      <children>
-        <Button mnemonicParsing="false" onAction="#navigateToScan" text="Scan RFID Tag" />
-        <Button mnemonicParsing="false" onAction="#navigateToManage" text="Manage Registered People" />
-        <Button mnemonicParsing="false" onAction="#navigateToNew" text="Register Person" />
-      </children>
-    </VBox>
+    <Label alignment="CENTER" layoutX="0.0" layoutY="8.0" prefWidth="500.0" styleClass="homeLabel" text="People Management" textFill="BLACK" underline="false">
+      <font>
+        <Font size="13.0" />
+      </font>
+    </Label>
+    <Pane fx:id="contentPane" layoutX="0.0" layoutY="58.0" prefHeight="380.0" prefWidth="500.0" />
+    <Button fx:id="btnHome" layoutX="434.0" layoutY="443.0" mnemonicParsing="false" onAction="#navigateToHome" styleClass="navigationButton" text="Home" />
   </children>
 </AnchorPane>
