Adding more views and service

--- a/client-module/src/org/jugvale/peoplemanagement/client/appStyle.css
+++ b/client-module/src/org/jugvale/peoplemanagement/client/appStyle.css
@@ -1,7 +1,7 @@
 .homeLabel {
     -fx-font-size: 30px;
     -fx-text-fill: red;
-    -fx-effect: dropshadow(three-pass-box , red, 20, 0.4 , 0 , 0 );
+    -fx-effect: dropshadow(three-pass-box , red, 30, 0.4 , 0 , 0 );
 }
 
 .homeLabel:hover {
@@ -9,6 +9,7 @@
 }
 
 .title {
+    -fx-text-alignment: center;
     -fx-font-size: 20px;
     -fx-font-weight: bold;
     -fx-text-alignment: center;
@@ -17,5 +18,27 @@
 .navigationButton {
     -fx-font-size: 18px;
     -fx-font-weight: bolder;
-    -fx-effect: dropshadow(three-pass-box , whitesmoke, 10, 0.4 , 0 , 0 );
+}
+
+.scanButton {
+    -fx-font-size: 20px;
+    -fx-font-weight: bolder;
+    -fx-font-style: italic;
+    -fx-text-fill: red;
+}
+
+.lblRFID {
+
+}
+
+.lblStatus {
+    -fx-font-size: 15px;
+    -fx-font-weight: bolder;
+    -fx-font-style: italic;
+    -fx-text-fill: red;
+
+}
+
+.lblServerReturn {
+
 }
