--- a/client-module/src/org/jugvale/peoplemanagement/client/view/scan.fxml
+++ b/client-module/src/org/jugvale/peoplemanagement/client/view/scan.fxml
@@ -6,12 +6,20 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.view.ScanController">
+<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.controller.ScanController">
   <children>
-    <Label layoutX="14.0" layoutY="14.0" styleClass="title" text="Scan RFID" />
-    <Label fx:id="lblReadInfo" layoutX="0.0" layoutY="111.0" prefHeight="55.0" prefWidth="500.0" text="Label" />
-    <Button layoutX="204.0" layoutY="192.0" mnemonicParsing="false" text="SCAN" />
-    <Label fx:id="lblStatus" layoutX="0.0" layoutY="237.0" prefWidth="38.0" text="Label" />
-    <Label fx:id="lblRFID" layoutX="0.0" layoutY="54.0" prefHeight="55.0" prefWidth="500.0" text="Label" />
+    <Label layoutX="0.0" layoutY="14.0" prefWidth="500.0" styleClass="title" text="Scan RFID" />
+    <StackPane id="StackPane" fx:id="mainPane" layoutX="0.0" layoutY="54.0">
+      <children>
+        <VBox id="VBox" fx:id="infoPane" alignment="CENTER" spacing="20.0" styleClass="scanButton">
+          <children>
+            <Label fx:id="lblRFID" prefHeight="55.0" prefWidth="500.0" styleClass="lblRFID" text="" />
+            <Label fx:id="lblReadInfo" prefHeight="67.0" prefWidth="500.0" styleClass="lblServerReturn" text="" />
+            <Button mnemonicParsing="false" onAction="#readRFID" text="SCAN" />
+            <Label fx:id="lblStatus" prefHeight="67.0" prefWidth="500.0" styleClass="lblStatus" text="" wrapText="true" VBox.vgrow="ALWAYS" />
+          </children>
+        </VBox>
+      </children>
+    </StackPane>
   </children>
 </AnchorPane>
