--- a/client-module/src/org/jugvale/peoplemanagement/client/view/manage.fxml
+++ b/client-module/src/org/jugvale/peoplemanagement/client/view/manage.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml">
+<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.controller.ManageController">
   <children>
     <VBox id="VBox" alignment="CENTER" layoutX="6.0" layoutY="7.0" spacing="5.0">
       <children>
@@ -16,21 +16,22 @@
             <Font size="13.0" />
           </font>
         </Label>
-        <TextField prefWidth="200.0" promptText="Filter by Name" />
-        <TableView prefHeight="285.0" prefWidth="481.0">
+        <TextField fx:id="txtFilter" onKeyReleased="#filter" prefWidth="200.0" promptText="Filter by Name" />
+        <TableView fx:id="tblPerson" prefHeight="268.0" prefWidth="481.0">
           <columns>
-            <TableColumn prefWidth="75.0" text="ID" />
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="100.0" text="RFID" />
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="114.0" text="First Name" />
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="110.0" text="Last Name" />
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="95.0" text="Job" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="38.0" text="ID" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="52.0" text="RFID" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="143.0" text="First Name" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="122.0" text="Last Name" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="87.0" text="Job" />
+            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="37.0" text="Age" />
           </columns>
         </TableView>
+        <Label fx:id="lblError" prefWidth="481.0" text="" />
         <HBox id="HBox" alignment="CENTER" spacing="5.0">
           <children>
-            <Button mnemonicParsing="false" text="Refresh" />
-            <Button mnemonicParsing="false" text="Remove" />
-            <Button mnemonicParsing="false" text="Add New" />
+            <Button mnemonicParsing="false" onAction="#refresh" text="Refresh" />
+            <Button fx:id="btnRemove" mnemonicParsing="false" onAction="#remove" text="Remove" />
           </children>
         </HBox>
       </children>
