--- a/client-module/src/org/jugvale/peoplemanagement/client/view/new.fxml
+++ b/client-module/src/org/jugvale/peoplemanagement/client/view/new.fxml
@@ -28,12 +28,15 @@
                     <Font name="System Italic" size="13.0" />
                   </font>
                 </Label>
+                <Label text="Age" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                <TextField fx:id="txtAge" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
               </children>
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="184.0" minWidth="10.0" prefWidth="80.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="292.0" minWidth="10.0" prefWidth="222.0" />
               </columnConstraints>
               <rowConstraints>
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
