--- a/client-module/src/org/jugvale/peoplemanagement/client/view/navigation.fxml
+++ b/client-module/src/org/jugvale/peoplemanagement/client/view/navigation.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.controller.MainController">
+<AnchorPane id="AnchorPane" prefHeight="380.0" prefWidth="500.0" xmlns:fx="http://javafx.com/fxml" fx:controller="org.jugvale.peoplemanagement.client.controller.NavigationController">
   <children>
     <VBox alignment="CENTER" layoutX="-2.0" layoutY="36.0" prefHeight="312.0" prefWidth="502.0" spacing="100.0">
       <children>
