Making the app functional with mock data

--- a/client-module/src/org/jugvale/peoplemanagement/client/appStyle.css
+++ b/client-module/src/org/jugvale/peoplemanagement/client/appStyle.css
@@ -28,6 +28,10 @@
 }
 
 .lblRFID {
+    -fx-font-size: 20px;
+    -fx-font-weight: bolder;
+    -fx-font-style: italic;
+    -fx-text-fill: blue;
 
 }
 
